moving some constant and obstacle position

--- a/config.cfg
+++ b/config.cfg
@@ -26,3 +26,14 @@ Adjacency3 = ([1, 0, 1, 0],
 Adjacency = ((0, 2, 2),
 	(1, 0, 2),
 	(1, 1, 0));
+
+W1 = 100
+W2 = 0.02
+
+KV = 8;
+KF = 25;
+KR = 10;
+
+OBSTACLE1X=80;
+OBSTACLE1Y=0;
+
